--- a/index.html
+++ b/index.html
@@ -525,42 +525,42 @@
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-sm-6 col-6 mb_30">
                     <div class="box-partners">
-                        <a href="" class="d-flex img item-partner text-center">
+                        <a href="" class="d-flex img item-partner c-img">
                             <img src="images/Logo_-_Bondly_-_Horizontal 1.png" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-6 mb_30">
                     <div class="box-partners">
-                        <a href="" class="d-flex img item-partner text-center">
+                        <a href="" class="d-flex img item-partner c-img">
                             <img src="images/Ferrum-_waifu2x_photo_noise3_scale_tta_1 1.png" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-6 mb_30">
                     <div class="box-partners">
-                        <a href="" class="d-flex img item-partner text-center">
+                        <a href="" class="d-flex img item-partner c-img">
                             <img src="images/Chainlink_logo 1.png" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-6 mb_30">
                     <div class="box-partners">
-                        <a href="" class="d-flex img item-partner text-center">
+                        <a href="" class="d-flex img item-partner c-img">
                             <img src="images/Ferrum-_waifu2x_photo_noise3_scale_tta_1 1.png" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-6 mb_30">
                     <div class="box-partners">
-                        <a href="" class="d-flex img item-partner text-center">
+                        <a href="" class="d-flex img item-partner c-img">
                             <img src="images/Chainlink_logo 1.png" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-6 mb_30">
                     <div class="box-partners">
-                        <a href="" class="d-flex img item-partner text-center">
+                        <a href="" class="d-flex img item-partner c-img">
                             <img src="images/Logo_-_Bondly_-_Horizontal 1.png" alt="">
                         </a>
                     </div>
