--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
                 <div class="col-lg-6 col-sm-6 col-12">
                     <div class="question-box">
                         <div class="question-title">
-                            What is Safepad (SFP)?
+                            <a href="" class="text">
+                                What is Safepad (SFP)?
+                            </a>
                         </div>
                         <div class="question-span">
                             Safepad (SFP) is lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque non cursus
@@ -150,7 +152,9 @@
         <div class="container">
             <div class="title">
                 <div class="service-title">
-                    Why Choose Safepad?
+                    <a href="" class="text">
+                        Why Choose Safepad?
+                    </a>
                 </div>
                 <div class="service-conttent">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit neque amet, magna tristique enim.
@@ -221,7 +225,9 @@
         <div class="container">
             <div class="title">
                 <div class="price-title">
-                    The Safepad System
+                    <a href="" class="text">
+                        The Safepad System
+                    </a>
                 </div>
                 <div class="price-conttent">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit neque amet, magna tristique enim.
@@ -417,7 +423,9 @@
     <section class="safepad-token">
         <div class="container">
             <div class="safepad-title">
-                Safepad Tokenomics
+                <a href="" class="text">
+                    Safepad Tokenomics
+                </a>
             </div>
             <div class="box">
                 <div class="row">
@@ -520,7 +528,9 @@
     <section class="partners">
         <div class="container">
             <div class="partners-title mb_30">
-                Our Partners
+                <a href="" class="text">
+                    Our Partners
+                </a>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-sm-6 col-6 mb_30">
