--- a/project.html
+++ b/project.html
@@ -84,7 +84,7 @@
     <main>
         <section class="project-open">
             <div class="project-title">
-                Projects Open Now
+                <a href="" class="text">Projects Open Now</a>
             </div>
             <div class="container">
                 <div class="row">
@@ -126,7 +126,9 @@
         </section>
         <section class="project-coming">
             <div class="project-title">
-                Projects Coming Soon
+                <a href="" class="text">
+                    Projects Coming Soon
+                </a>
             </div>
             <div class="container">
                 <div class="row">
@@ -1008,7 +1010,8 @@
         </section>
         <section class="project-close">
             <div class="project-title">
-                Projects Closed
+                <a href="" class="text">Projects Closed</a>
+
             </div>
             <div class="container">
                 <div class="row">
