--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <!-- Back to top button -->
+    <a id="button"></a>
     <header>
         <div class="nav-main">
             <div class="container">
