--- a/project.html
+++ b/project.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <!-- Back to top button -->
+    <a id="button"></a>
     <header>
         <div class="nav-main">
             <div class="container">
@@ -1047,7 +1049,7 @@
                                         </div>
                                         <div class="box-button d-flex align-items-center">
                                             <button class="close-son">
-                                                Coming-son
+                                                Closed
                                             </button>
                                             <button>
                                                 BUSD
@@ -1144,7 +1146,7 @@
                                         </div>
                                         <div class="box-button d-flex align-items-center">
                                             <button class="close-son">
-                                                Coming-son
+                                                Closed
                                             </button>
                                             <button>
                                                 BUSD
@@ -1241,7 +1243,7 @@
                                         </div>
                                         <div class="box-button d-flex align-items-center">
                                             <button class="close-son">
-                                                Coming-son
+                                                Closed
                                             </button>
                                             <button>
                                                 BUSD
@@ -1338,7 +1340,7 @@
                                         </div>
                                         <div class="box-button d-flex align-items-center">
                                             <button class="close-son">
-                                                Coming-son
+                                                Closed
                                             </button>
                                             <button>
                                                 BUSD
@@ -1435,7 +1437,7 @@
                                         </div>
                                         <div class="box-button d-flex align-items-center">
                                             <button class="close-son">
-                                                Coming-son
+                                                Closed
                                             </button>
                                             <button>
                                                 BUSD
@@ -1532,7 +1534,7 @@
                                         </div>
                                         <div class="box-button d-flex align-items-center">
                                             <button class="close-son">
-                                                Coming-son
+                                                Closed
                                             </button>
                                             <button>
                                                 BUSD
@@ -1629,7 +1631,7 @@
                                         </div>
                                         <div class="box-button d-flex align-items-center">
                                             <button class="close-son">
-                                                Coming-son
+                                                Closed
                                             </button>
                                             <button>
                                                 BUSD
@@ -1726,7 +1728,7 @@
                                         </div>
                                         <div class="box-button d-flex align-items-center">
                                             <button class="close-son">
-                                                Coming-son
+                                                Closed
                                             </button>
                                             <button>
                                                 BUSD
@@ -1823,7 +1825,7 @@
                                         </div>
                                         <div class="box-button d-flex align-items-center">
                                             <button class="close-son">
-                                                Coming-son
+                                                Closed
                                             </button>
                                             <button>
                                                 BUSD
